# chess-bench

./: .gitignore  README.md
go/: benchmark.go  go.mod  pgn_benchmark.go
node/: benchmark.js  package.json  pgn_benchmark.js
python/: benchmark.py  pgn_benchmark.py  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
