[package]
name = "chess-bench"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "pgn_benchmark"
path = "src/bin/pgn_benchmark.rs"

[dependencies]
shakmaty = "0.28"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
